# src/api/v1/user/controllers/create.js
@@ -1,0 +1,37 @@
+const userServices = require("../../../../lib/user");
+/**
+ * Create a new User.
+ *
+ * @param {Object} req - The request object.
+ * @param {Object} res - The response object.
+ * @param {Function} next - The next middleware function.
+ * @returns {void}
+ */
+const create = async (req, res, next) => {
+  const { name, username, email, password, confirmed, blocked } = req.body;
+  try {
+    const user = await userServices.create({
+      name,
+      username,
+      email,
+      password,
+      confirmed,
+      blocked,
+    });
+    const { id: userId } = user;
+    const response = {
+      code: 201,
+      message: "User Created Successfully",
+      data: user,
+      links: {
+        self: `/users/${userId}`,
+      },
+    };
+
+    res.status(201).json(response);
+  } catch (error) {
+    next(error);
+  }
+};
+
+module.exports = create;
