# src/api/v1/user/controllers/edit.js
@@ -1,24 +1,22 @@
 const userServices = require("../../../../lib/user");
 
-const findSingle = async (req, res, next) => {
+const edit = async (req, res, next) => {
   const { id } = req.params;
-  const { populate } = req.query || "";
 
   try {
-    const user = await userServices.findSingle({ id, populate });
+    const user = await userServices.edit(id, req.body);
     const { id: userId } = user;
     const response = {
-      id: userId,
+      code: 200,
+      message: "User updated successfully",
       data: user,
       links: {
         self: `/users/${userId}`,
       },
     };
-
     res.status(200).json(response);
   } catch (error) {
     next(error);
   }
 };
-
-module.exports = findSingle;
+module.exports = edit;
